--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Grass Roots Cyber Club Chat</title>
+  <title>Grass Roots Cyber Dot Club</title>
   <link rel="icon" type="image/png" href="favicon.png" />
   <script src="https://chitchatter.im/sdk.js"></script>
   <style>
@@ -56,7 +56,7 @@
       "🛡️ What’s a practical home lab setup?",
       "💼 Is the cert grind worth it?",
       "📚 Tools for teaching cyber in K-12?",
-      "🧠 How can small towns stay secure?"
+      "🧠 How can small organizations stay secure?"
     ];
     let current = 0;
 
@@ -72,10 +72,11 @@
   </script>
 </head>
 <body>
-  <h1>💬 Grass Roots Cyber Chat Club</h1>
+  <h1>💬 Grass Roots Cyber Dot Club</h1>
   <div id="topics">Welcome to the club.</div>
   <chat-room width="800" height="800" room="GrassRootsCyber"></chat-room>
   <footer>Powered by <a href="https://chitchatter.im" style="color:#00ffcc;">Chitchatter</a> · Privacy-friendly analytics by GoatCounter</footer>
-  <script data-goatcounter="https://grassrootscyber.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+  <script data-goatcounter="https://grassrootscyber.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
