--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <h1>💬 Grass Roots Cyber Dot Club</h1>
   <div id="topics">Welcome to the club.</div>
   <chat-room width="800" height="800" room="GrassRootsCyber"></chat-room>
-  <footer>Powered by <a href="https://chitchatter.im" style="color:#00ffcc;">Chitchatter</a> · Privacy-friendly analytics by GoatCounter</footer>
+  <footer>Powered by <a href="https://chitchatter.im" style="color:#00ffcc;">Chitchatter</a> · Privacy-friendly analytics by <a href="https://www.goatcounter.com/" style="color:#00ffcc;">GoatCounter</a></footer>
   <script data-goatcounter="https://grassrootscyber.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </body>
